--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -2,7 +2,7 @@ name: Backup Repository Daily
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Запуск каждый день в полночь (UTC)
+    - cron: '0 0 * * *'
 
 jobs:
   backup:
@@ -17,9 +17,6 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      - name: Create backup-repo folder if not exists
-        run: mkdir -p backup-repo
-
       - name: Clone the backup repository
         run: |
           git clone https://github.com/7eromy/backup-repo.git backup-repo
@@ -27,13 +24,24 @@ jobs:
 
       - name: Copy files to backup repository
         run: |
-          cp -r * ./backup-repo/
+          rsync -av --exclude=.git ./ ./backup-repo/
         working-directory: .
 
       - name: Commit and push changes
         run: |
           cd backup-repo
           git add .
-          git commit -m "Backup on $(date)" || echo "No changes to commit"
-          git push origin main
+          if git diff-index --quiet HEAD --; then
+            echo "No changes to commit";
+          else
+            git commit -m "Backup on $(date)"
+            git push origin main
+          fi
         working-directory: ./backup-repo
+
+      - name: Debug workspace
+        run: |
+          echo "Workspace files:"
+          ls -R
+          echo "Backup folder contents:"
+          ls -R backup-repo
