--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,39 +1,47 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python application
+name: Backup Repository Daily
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
-  build:
-
+  backup:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
+      - name: Checkout current repository
+        uses: actions/checkout@v3
+
+      - name: Set up Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+      - name: Clone the backup repository
+        run: |
+          git clone https://github.com/7eromy/backup-repo.git backup-repo
+        working-directory: .
+
+      - name: Copy files to backup repository
+        run: |
+          rsync -av --exclude=.git ./ ./backup-repo/
+        working-directory: .
+
+      - name: Commit and push changes
+        run: |
+          cd backup-repo
+          git add .
+          if git diff-index --quiet HEAD --; then
+            echo "No changes to commit";
+          else
+            git commit -m "Backup on $(date)"
+            git push origin main
+          fi
+        working-directory: ./backup-repo
+
+      - name: Debug workspace
+        run: |
+          echo "Workspace files:"
+          ls -R
+          echo "Backup folder contents:"
+          ls -R backup-repo
