--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -16,6 +16,9 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          
+      - name: Create backup-repo folder if not exists
+        run: mkdir -p backup-repo
 
       - name: Clone the backup repository
         run: |
