--- a/.github/workflows/backup-to-remote.yml
+++ b/.github/workflows/backup-to-remote.yml
@@ -29,5 +29,9 @@ jobs:
       - name: Commit and push to remote repository
         run: |
           git add .
-          git commit -m "Backup to another account on $(date)"
-          git push origin main
+          if git diff-index --quiet HEAD --; then
+            echo "No changes to commit";
+          else
+            git commit -m "Backup to another account on $(date)"
+            git push origin main
+          fi
